<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CorporateAgenda</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="login">Comptes &amp;syncro</string>
    <string name="title">Carrefour Agenda</string>
    <string name="empty" />
    <string name="eveniment">ÉVÈNEMENT</string>
    <string name="notification_all">Notification Service </string>
    <string name="title_activity_new_events">Nouvel événement</string>
    <string name="Cancel">Annuler</string>
    <string name="okName">Ok</string>
    <string name="nom_de_l_apos_evenement">Nom de événement</string>
    <string name="spinnerItem">Choisissez unde valeur</string>
    <string name="title_activity_events_detail">EventsDetail</string>

</resources>