<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:keepScreenOn="true"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_green_gradient"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/header_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/empty"
            android:scaleType="fitXY"
            android:src="@drawable/ic_top_applogo" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/login_container"
        android:layout_marginBottom="76dp"
        android:background="@color/transparent"
        android:src="@drawable/bt_connexion_selector" />

    <LinearLayout
        android:id="@+id/login_container"
        style="@style/ProfilEditTextGroup"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TextView
            android:id="@+id/login_id_prompt"
            style="@style/LoginLabel"
            android:layout_marginTop="5.0dip"
            android:text="@string/username" />

        <EditText
            android:id="@+id/inputUsername"
            style="@style/LoginEditText"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/login_pwd_prompt"
            style="@style/LoginLabel"
            android:text="@string/password" />

        <EditText
            android:id="@+id/inputPassword"
            style="@style/LoginEditText"
            android:layout_marginBottom="10.0dip"
            android:inputType="textPassword"
            android:lines="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_container"
        android:layout_alignLeft="@+id/login_container"
        android:text="@string/login"
        android:textAppearance="@style/CustomFontBoldLabel"
        android:textColor="@color/contents_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:paddingRight="10dp"
        android:text="@string/title"
        android:textAppearance="@style/CustomFontMediumLabel"
        android:textSize="20sp" />

</RelativeLayout>